--- a/app/templates/visualisatie.html
+++ b/app/templates/visualisatie.html
@@ -196,7 +196,8 @@ $(function() {
                     <strong>Latijnse naam:</strong> <span id="latijns">Onbekend</span><br/>
                     <strong>Familie:</strong> <span id="familie">Onbekend</span><br/>
                     <strong>Habitat:</strong> <span id="habitat">Onbekend</span><br/>
-                    </p><span id="info">Geen informatie beschikbaar.</span><p>
+                    </p>
+                    <p class="text-justify"><span id="info">Geen informatie beschikbaar.</span>
                     </p>
                 </div>
             </div>
