--- a/app/static/css/graphs.css
+++ b/app/static/css/graphs.css
@@ -72,16 +72,19 @@
 .bar {
   fill: #d3d3d3;
   cursor: pointer;
+  opacity: 0.4;
 }
 
 .activeBar {
   fill: #18bc9c;
   cursor: pointer;
+  opacity: 1.0;
 }
 
 .highlightedBar {
   fill: steelblue;
   cursor: pointer;
+  opacity: 1.0;
 }
 
 /**
@@ -94,6 +97,7 @@
 .line {
   fill: none;
   stroke: #d3d3d3;
+  opacity: 0.4;
   stroke-width: 1.5px;
   cursor: pointer;
 }
@@ -102,12 +106,14 @@
   fill: none;
   stroke: #18bc9c;
   stroke-width: 1.5px;
+  opacity: 1.0;
 }
 
 .highlightedLine {
   fill: none;
   stroke: steelblue;
   stroke-width: 1.5px;
+  opacity: 1.0;
 }
 
 /**
